<resources>
    <string name="app_name">Acoustic Analyst</string>
</resources>